[gd_scene load_steps=2 format=3 uid="uid://cnjtqnj2nk02p"]

[ext_resource type="Script" path="res://prog_122b.gd" id="1_g0pwl"]

[node name="prog122b" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_g0pwl")

[node name="ItemList" type="ItemList" parent="."]
layout_mode = 0
offset_right = 1146.0
offset_bottom = 322.0

[node name="btncalc" type="Button" parent="."]
layout_mode = 0
offset_left = 108.0
offset_top = 466.0
offset_right = 260.0
offset_bottom = 577.0
text = "Calculate"

[node name="btnclear" type="Button" parent="."]
layout_mode = 0
offset_left = 491.0
offset_top = 456.0
offset_right = 662.0
offset_bottom = 568.0
text = "Clear"

[node name="btnexit" type="Button" parent="."]
layout_mode = 0
offset_left = 899.0
offset_top = 446.0
offset_right = 1051.0
offset_bottom = 557.0
text = "Exit"

[connection signal="pressed" from="btncalc" to="." method="_on_btncalc_pressed"]
[connection signal="pressed" from="btnclear" to="." method="_on_btnclear_pressed"]
[connection signal="pressed" from="btnexit" to="." method="_on_btnexit_pressed"]
